--- a/package.xml
+++ b/package.xml
@@ -18,10 +18,10 @@
   <email>cweiske@php.net</email>
   <active>yes</active>
  </lead>
- <date>2007-04-04</date>
+ <date>2008-03-24</date>
  <version>
-  <release>0.1.1</release>
-  <api>0.1.0</api>
+  <release>0.2.0</release>
+  <api>0.2.0</api>
  </version>
  <stability>
   <release>beta</release>
@@ -30,7 +30,9 @@
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL Version 2.1</license>
 
  <notes>
-  Fixing bug #10354: MetaWeblog: dateCreated not valid w/ Patch (Markus Tacker)
+  - Support for different blog post types
+  - User agent
+  - Some more post constants
  </notes>
 
  <contents>
@@ -79,6 +81,23 @@
  <phprelease />
 
  <changelog>
+
+  <release>
+   <version>
+    <release>0.2.0</release>
+    <api>0.2.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2008-03-24</date>
+   <notes>
+  - Support for different blog post types
+  - User agent
+  - Some more post constants
+   </notes>
+  </release>
 
   <release>
    <version>
