--- a/package.xml
+++ b/package.xml
@@ -18,9 +18,9 @@
   <email>cweiske@php.net</email>
   <active>yes</active>
  </lead>
- <date>2008-06-23</date>
+ <date>2008-08-23</date>
  <version>
-  <release>0.2.1</release>
+  <release>0.2.2</release>
   <api>0.2.0</api>
  </version>
  <stability>
@@ -30,7 +30,7 @@
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL Version 2.1</license>
 
  <notes>
-- Forgot to add Exception.php
+- Fix problem in MediaObject.php, thanks to our demanding chinese friends!
  </notes>
 
  <contents>
@@ -80,6 +80,21 @@
  <phprelease />
 
  <changelog>
+
+  <release>
+   <version>
+    <release>0.2.2</release>
+    <api>0.2.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2008-08-23</date>
+   <notes>
+- Fix problem in MediaObject.php, thanks to our demanding chinese friends!
+   </notes>
+  </release>
 
   <release>
    <version>
